# actions

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: auto-merge-pr.yml  code-review.yml  docker-publish.yml  fix-future-date.yml  fix-post-date.yml  label-merge-conflict.yml  pypi-publish.yml  release.yml  unit-test-go.yml  unit-test-python.yml
docs/done/: 1_auto_merge_implementation.md  1_auto_merge_prd.md  1_auto_merge_todo.md  1_common_implementation.md  1_fix_implementation.md  1_fix_prd.md  1_fix_todo.md  1_merge_implementation.md  1_merge_todo.md
docs/start/: 1_common_prd.md  1_common_test_todo.md  1_common_todo.md  1_merge_prd.md
scripts/weekly-todo-report/: .dockerignore  DOCKER_README.md  Dockerfile  main.py  pyproject.toml  run.sh  test_this_week_range.py  weekly_report_2025-08-23_2025-08-29.md
scripts/weekly-todo-report/.prompts/: weekly_report.md
